fix(skills): grow on wrap

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -38,12 +38,13 @@ section.skills {
             justify-content: space-between;
             align-items: center;
             width: 10%;
+            flex-shrink: 0;
+            flex-grow: 1;
             padding: 10px 10px;
             gap: 10px;
             background-color: $primary-beta;
             min-width: 250px;
             border-radius: 10px;
-            height: 100%;
     
             h1 {
                 font-size: $font-size * 1.5;
@@ -58,7 +59,6 @@ section.skills {
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-                height: 100%;
                 gap: 10px;
 
                 img {
